<resources>
    <string name="app_name">Gestión de clientes</string>
    <string name="action_settings">Ajustes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="nif">NIF</string>
    <string name="guardar_cliente">GUARDAR CLIENTE</string>
    <string name="provincia">Provincia</string>
    <string name="eres_vip">Eres VIP?</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="anhadir_clientes">Añadir clientes</string>
</resources>